--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -33,6 +35,17 @@
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
+
+    /* my styles  */
+
+    --mysecondary: #040113;
+    --myprimary: #faf8ff;
+    --myaccent: #ff0000;
+
+    /* my fonts  */
+
+    --heading-fonts: 'Oswald', sans-serif;
+    --detail-fonts: 'Source Serif 4', serif;
   }
 
   .dark {
